# TFHE4proc

./: CMakeLists.txt  README.md
include/: cloudkey.hpp  detwfa.hpp  externalproduct.hpp  fftfpga.h  mulfft.hpp  trgsw.hpp  trlwe.hpp
include/params/: 128bit.hpp
src/: CMakeLists.txt
thirdparties/fftfpga/: CMakeLists.txt  fft1d.c  fftfpga.c  fftfpga.h  fpga_state.h  opencl_utils.c  opencl_utils.h
thirdparties/fpga/: fft_processor_fpga.cpp  fpga.cpp
unit_test/fft/: CMakeLists.txt
unit_test/nand/: CMakeLists.txt  nand_batch.cpp
unit_test_results/: nand_batch_results.txt
